[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/networked_editor/dock.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="NetworkedEditor" type="Control"]
script = ExtResource( 1 )

[node name="Input" type="VBoxContainer" parent="."]
margin_right = 160.0
margin_bottom = 640.0

[node name="Name" type="LineEdit" parent="Input"]
margin_right = 160.0
margin_bottom = 24.0
text = "Name"
placeholder_text = "Name"

[node name="IP" type="LineEdit" parent="Input"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 52.0
text = "127.0.0.1"
placeholder_text = "IP"

[node name="Port" type="LineEdit" parent="Input"]
margin_top = 56.0
margin_right = 160.0
margin_bottom = 80.0
text = "8008"
placeholder_text = "Port"

[node name="Host" type="Button" parent="Input"]
margin_top = 84.0
margin_right = 160.0
margin_bottom = 104.0
text = "Host"

[node name="Connect" type="Button" parent="Input"]
margin_top = 108.0
margin_right = 160.0
margin_bottom = 128.0
text = "Connect"

[node name="Disconnect" type="Button" parent="Input"]
margin_top = 132.0
margin_right = 160.0
margin_bottom = 152.0
disabled = true
text = "Disconnect"

[node name="SceneSync" type="Button" parent="Input"]
margin_top = 156.0
margin_right = 160.0
margin_bottom = 176.0
toggle_mode = true
text = "Scene Sync"

[node name="Label" type="Label" parent="Input"]
margin_top = 180.0
margin_right = 160.0
margin_bottom = 194.0
text = "Editor Peers"
align = 1
valign = 1

[node name="Peers" type="Tree" parent="Input"]
margin_top = 198.0
margin_right = 160.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 256 )
custom_styles/bg_focus = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
hide_root = true
[connection signal="pressed" from="Input/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Input/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Input/Disconnect" to="." method="_on_Disconnect_pressed"]
